completed basic routes

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A credit repair website where users will be able to sign up, authenticate, and store their personal information. The front-end will be made with React and the back-end will be made with Node, Express, and Mongo DB.",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
